umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@accldraw_2-methylene-13-dihydroperimidine.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule
category: extended_molecule
molecule:
  success: false
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 18, col 6"
molecule_lenient:
  success: false
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 18, col 6"
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C12N2
    atom_count: 14
    bond_count: 16
    extended_atoms: 0
    extended_bonds: 16
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C12N2
    atom_count: 14
    bond_count: 16
    extended_atoms: 0
    extended_bonds: 16
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
