umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@accldraw_2-methylprop-2-en-1-amine.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule_lenient
category: extended_molecule_lenient
molecule:
  success: false
  error:
    error_type: UnsupportedLegacyAtomList
    message: Unsupported legacy atom list at line 13
molecule_lenient:
  success: false
  error:
    error_type: UnsupportedLegacyAtomList
    message: Unsupported legacy atom list at line 13
extended_molecule:
  success: false
  error:
    error_type: UnsupportedLegacyAtomList
    message: Unsupported legacy atom list at line 13
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: "C4[L]"
    atom_count: 5
    bond_count: 4
    extended_atoms: 1
    extended_bonds: 4
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
