umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@accldraw_methanediol.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule
category: extended_molecule
molecule:
  success: false
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 9, col 0"
molecule_lenient:
  success: false
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 9, col 0"
extended_molecule:
  success: true
  extended_summary:
    sum_formula: CO2
    atom_count: 3
    bond_count: 2
    extended_atoms: 0
    extended_bonds: 1
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: CO2
    atom_count: 3
    bond_count: 2
    extended_atoms: 0
    extended_bonds: 1
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
