umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@accldraw_prd_01.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule
category: extended_molecule
molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 4, col 63"
molecule_lenient:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 4, col 63"
extended_molecule:
  success: true
  extended_summary:
    sum_formula: CBrClFI
    atom_count: 5
    bond_count: 4
    extended_atoms: 0
    extended_bonds: 4
    property_count: 1
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: CBrClFI
    atom_count: 5
    bond_count: 4
    extended_atoms: 0
    extended_bonds: 4
    property_count: 1
    rgroup_count: 0
    sgroup_count: 0
